add2 mac to index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@ Hello Seung Jin!!! Let's be rich!!!
 This is created by myself from my macbook pro!!!
 =======
 Hello World, SeungJin
-coding everyone!!!!
->>>>>>> 6fc7a23845c4269039bdb99f8b4cac937982abbc
+coding everyone!!!!>>>>>>>
 </body>
 </html>
