--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@ Remove this if you use the .htaccess -->
 <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 </head>
 <body>
-<<<<<<< HEAD
+</head>
 Hello Seung Jin!!! Let's be rich!!!
 This is created by myself from my macbook pro!!!
 =======
 Hello World, SeungJin
-coding everyone!!!!>>>>>>>
+coding everyone!!!!
+do you know what? this is third change!!!!
 </body>
 </html>
